--- a/AWS/Views/MainWindow.axaml
+++ b/AWS/Views/MainWindow.axaml
@@ -92,7 +92,7 @@
 									<Label
 										Grid.Column="0"
 										Grid.Row="0"
-										Content="Порт вольтметра"
+										Content="Порт мультиметра"
 										Margin="0,5,0,0">
 									</Label>
 									<ComboBox
