--- a/AWS/Views/MainWindow.axaml
+++ b/AWS/Views/MainWindow.axaml
@@ -3,7 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Width="653" Height="630"
+        Width="693" Height="630"
         x:Class="AWS.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="АРМ v: 0.1.4"
@@ -11,26 +11,25 @@
 	
 	<StackPanel >
 		<Canvas>
-			<StackPanel Margin="330,0,0,0" >
+			<StackPanel Margin="350,0,0,0" >
 				<TextBlock Text="Подключение устройств" ></TextBlock>
 				<Border BorderBrush="Black"
-                BorderThickness="1" Height="350">
+                BorderThickness="1" Height="370" CornerRadius="10" Padding="10">
 					<StackPanel >
 						<Button
 							Click="Button_Update_Ports"
 							Content="Обновить порты"
 							Width="300"
 							Margin="5"
-							HorizontalContentAlignment="Center">
+							HorizontalContentAlignment="Center"
+							CornerRadius="10">
 						</Button>
-						<StackPanel Name="Panel_Generator"  Background="LightGray" Width="300" Margin="5">
-							<Border
-							Margin="5"
-							BorderBrush="LightGray">
+						<Border Name="Panel_Generator"  Background="LightGray" Width="300" Margin="5" CornerRadius="10">
+							
 
 								<Grid
 									ShowGridLines="False"
-									Margin="5"
+									Margin="15,5,5,5"
 						  ColumnDefinitions="Auto, Auto"
 						  RowDefinitions="Auto, Auto, Auto">
 
@@ -45,7 +44,9 @@
 										Background="White"
 										Width="130"
 										Grid.Column="1"
-										Grid.Row="0">
+										Grid.Row="0"
+										CornerRadius="10"
+										Margin="5,0">
 									</ComboBox>
 									<RadioButton x:Name="Option1"
 												 Grid.Column="0"
@@ -58,14 +59,17 @@
 												 Grid.Row="1"
 									 Content="Канал 2"
 						 
-									 GroupName="OptionsGroup"/>
+									 GroupName="OptionsGroup"
+												 Margin="5,0"/>
 
 									<Button
 										Click="Button_Open_Port_Generator"
 										Content="Подключить"
 										Width="130"
 										Grid.Column="1"
-										Grid.Row="2">
+										Grid.Row="2"
+										CornerRadius="10"
+										Margin="5">
 
 									</Button>
 									<Button
@@ -73,20 +77,19 @@
 										Content="Отключить"
 										Width="130"
 										Grid.Column="0"
-										Grid.Row="2">
+										Grid.Row="2"
+										CornerRadius="10">
 
 									</Button>
 								</Grid>
-							</Border>
-						</StackPanel>
-						<StackPanel Name="Panel_Agilent"  Background="LightGray" Width="300" Margin="5">
-							<Border
-							Margin="5"
-							BorderBrush="LightGray">
+							
+						</Border>
+						<Border Name="Panel_Agilent"  Background="LightGray" Width="300" Margin="5" CornerRadius="10">
+							
 
 								<Grid
 									ShowGridLines="False"
-									Margin="5"
+									Margin="15,5,5,5"
 						  ColumnDefinitions="Auto, Auto"
 						  RowDefinitions="Auto, Auto">
 									<Label
@@ -100,7 +103,9 @@
 										Background="White"
 										Width="130"
 										Grid.Column="1"
-										Grid.Row="0">
+										Grid.Row="0"
+										CornerRadius="10"
+									Margin="5,0">
 
 									</ComboBox>
 									<Button
@@ -108,7 +113,9 @@
 										Content="Подключить"
 										Width="130"
 										Grid.Column="1"
-										Grid.Row="1">
+										Grid.Row="1"
+										CornerRadius="10"
+										Margin="5">
 
 									</Button>
 									<Button
@@ -116,19 +123,17 @@
 										Content="Отключить"
 										Width="130"
 										Grid.Column="0"
-										Grid.Row="1">
+										Grid.Row="1"
+										CornerRadius="10">
 									</Button>
 								</Grid>
-							</Border>
-						</StackPanel>
-						<StackPanel Name="Panel_PLC"  Background="LightGray" Width="300" Margin="5" >
-							<Border
-							Margin="5"
-							BorderBrush="LightGray">
+						</Border>
+						<Border Name="Panel_PLC"  Background="LightGray" Width="300" Margin="5" CornerRadius="10">
+							
 
 								<Grid
 									ShowGridLines="False"
-									Margin="5"
+									Margin="15,5,5,5"
 						  ColumnDefinitions="Auto, Auto"
 						  RowDefinitions="Auto, Auto, Auto">
 
@@ -143,7 +148,9 @@
 										Background="White"
 										Width="130"
 										Grid.Column="1"
-										Grid.Row="0" >
+										Grid.Row="0" 
+										CornerRadius="10"
+										Margin="5,0">
 
 									</ComboBox>
 									<Button
@@ -151,7 +158,9 @@
 										Content="Подключить"
 										Width="130"
 										Grid.Column="1"
-										Grid.Row="2">
+										Grid.Row="2"
+										CornerRadius="10"
+										Margin="5">
 
 									</Button>
 									<Button
@@ -159,34 +168,36 @@
 										Content="Отключить"
 										Width="130"
 										Grid.Column="0"
-										Grid.Row="2">
+										Grid.Row="2"
+										CornerRadius="10">
 
 									</Button>
 								</Grid>
 							</Border>
-						</StackPanel>
+						
 					</StackPanel>
 				</Border>
 			</StackPanel>
 
 
 			<TextBox Name="LogTextBox"
-						 Width="633"
-						 Height="250"
+						 Width="673"
+						 Height="230"
 						 FontSize="12"
-						 Margin="10,375,0,0"
+						 Margin="10,395,0,0"
              IsReadOnly="True"
              AcceptsReturn="True"
              AcceptsTab="True"
              ScrollViewer.VerticalScrollBarVisibility="Auto"
-             TextWrapping="Wrap">
+             TextWrapping="Wrap"
+					 CornerRadius="10">
 
 				</TextBox>
 			
 			<StackPanel Margin="10,0,0,0">
 				<TextBlock Text="Настройка" ></TextBlock>
 				<Border BorderBrush="Black"
-                BorderThickness="1">
+                BorderThickness="1" CornerRadius="10" Padding="10">
 					<StackPanel >
 
 							<Button Name="Setting_PLC"
@@ -194,74 +205,83 @@
 								Content="Начать настройку"
 								Margin="5"
 								Width="300"
-								HorizontalContentAlignment="Center"/>
+								HorizontalContentAlignment="Center"
+									CornerRadius="10"/>
 
 						<Button Name="Combo_Setting_Button"
 							Content="Открыть отдельные настройки" 
 								Margin="5"
 								HorizontalContentAlignment="Center"
 								Width="300"
-								Click="Combo_Setting" />
+								Click="Combo_Setting" 
+								CornerRadius="10"/>
 							
 							<Button Name="Setting_Volt"
 								Click="Button_Setting_Volt"
 								Content="Настроить напряжение"
 								Margin="5"
 								Width="300"
-								HorizontalContentAlignment="Center" IsVisible="false"/>
+								HorizontalContentAlignment="Center" IsVisible="false"
+									CornerRadius="10"/>
 
 							<Button Name="Setting_IEPE"
 								Click="Button_Setting_IEPE"
 								Content="Настроить IEPE"
 								Margin="5"
 								Width="300"
-								HorizontalContentAlignment="Center" IsVisible="false"/>
+								HorizontalContentAlignment="Center" IsVisible="false"
+									CornerRadius="10"/>
 
 							<Button Name="Setting_4_20"
 								Click="Button_Setting_4_20"
 								Content="Настроить 4-20"
 								Margin="5"
 								Width="300"
-								HorizontalContentAlignment="Center" IsVisible="false"/>
+								HorizontalContentAlignment="Center" IsVisible="false"
+									CornerRadius="10"/>
 
 							<Button Name="Setting_Rs_485"
 								Click="Setting_Rs_485_Click"
 								Content="Настроить RS-485"
 								Margin="5"
 								Width="300"
-								HorizontalContentAlignment="Center" IsVisible="false"/>
+								HorizontalContentAlignment="Center" IsVisible="false"
+									CornerRadius="10"/>
 						<Button Name="Save_Reg"
 								Click="Save_Reg_Button"
 								Content="Сохранить регистры на сервер"
 								Margin="5"
 								Width="300"
-								HorizontalContentAlignment="Center" IsVisible="false"/>
+								HorizontalContentAlignment="Center" IsVisible="false"
+								CornerRadius="10"/>
 
-							<Border Background="LightGray" Margin="5" Name="Serial_Border" IsVisible="True">
+							<Border Background="LightGray" Margin="5" Name="Serial_Border" IsVisible="True" CornerRadius="10">
 								<Grid ColumnDefinitions="Auto,Auto" Margin="10" >
 									<Label Content="Серийный номер" Grid.Column="0" Margin="0,5,10,0"></Label>
 									<TextBox Name="Serial_Number" Width="150" Grid.Column="1" Background="White"
 										 TextChanged="Serial_Number_PreviewTextInput"
-											 Watermark="Введите номер">
+											 Watermark="Введите номер"
+											 CornerRadius="10">
 									</TextBox>
 									
 								</Grid>
 							</Border>
-							<Border Background="LightGray" Margin="5" Name="Order_Border" IsVisible="True">
+							<Border Background="LightGray" Margin="5" Name="Order_Border" IsVisible="True" CornerRadius="10" >
 								<Grid ColumnDefinitions="Auto,Auto" Margin="10" >
 									<Label Content="Номер заказа" Grid.Column="0" Margin="0,5,32,0"></Label>
 									<TextBox Name="Order_Number" Width="150" Grid.Column="1" Background="White"
 										 TextChanged="Order_Number_PreviewTextInput"
-											 Watermark="Введите номер">
+											 Watermark="Введите номер"
+											 CornerRadius="10">
 									</TextBox>
 									
 								</Grid>
 							</Border>
-							<Border Background="LightGray" Margin="5" Name="PLC_Border" IsVisible="True">
+							<Border Background="LightGray" Margin="5" Name="PLC_Border" IsVisible="True" CornerRadius="10">
 								<Grid ColumnDefinitions="Auto,Auto" Margin="10" >
 									<Label Content="Контроллер" Grid.Column="0" Margin="0,5,45,0"></Label>
 									<ComboBox Name="Name_PLC" Width="150" Grid.Column="1" Background="White"
-										SelectedIndex="0" >
+										SelectedIndex="0"  CornerRadius="10">
 										<ComboBoxItem>PLC 112</ComboBoxItem>
 										<ComboBoxItem>PLC 121</ComboBoxItem>
 										<ComboBoxItem>PLC 481</ComboBoxItem>
