--- a/AWS/Views/MainWindow.axaml
+++ b/AWS/Views/MainWindow.axaml
@@ -9,12 +9,12 @@
         Title="АРМ v: 0.1.4"
         FontFamily="Arial">
 	
-	<StackPanel >
+	<StackPanel Background="#FBFBFB">
 		<Canvas>
-			<StackPanel Margin="350,0,0,0" >
+			<StackPanel Margin="350,0,0,0"  >
 				<TextBlock Text="Подключение устройств" ></TextBlock>
-				<Border BorderBrush="Black"
-                BorderThickness="1" Height="370" CornerRadius="10" Padding="10">
+				<Border BorderBrush="#A0A0A0" Background="#F0F0F0"
+                BorderThickness="1" CornerRadius="10" Padding="10">
 					<StackPanel >
 						<Button
 							Click="Button_Update_Ports"
@@ -22,9 +22,12 @@
 							Width="300"
 							Margin="5"
 							HorizontalContentAlignment="Center"
-							CornerRadius="10">
+							CornerRadius="10"
+							Background="#E1E1E1"
+								Foreground="Black"
+								BorderBrush="#A0A0A0" >
 						</Button>
-						<Border Name="Panel_Generator"  Background="LightGray" Width="300" Margin="5" CornerRadius="10">
+						<Border Name="Panel_Generator"  Background="LightGray" Margin="5" CornerRadius="10">
 							
 
 								<Grid
@@ -65,26 +68,34 @@
 									<Button
 										Click="Button_Open_Port_Generator"
 										Content="Подключить"
+										HorizontalContentAlignment="Center"
 										Width="130"
 										Grid.Column="1"
 										Grid.Row="2"
 										CornerRadius="10"
-										Margin="5">
+										Margin="5"
+									Background="#E1E1E1"
+								Foreground="Black"
+								BorderBrush="#A0A0A0">
 
 									</Button>
 									<Button
 										Click="Button_Close_Port_Generator"
 										Content="Отключить"
+										HorizontalContentAlignment="Center"
 										Width="130"
 										Grid.Column="0"
 										Grid.Row="2"
-										CornerRadius="10">
+										CornerRadius="10"
+										Background="#E1E1E1"
+								Foreground="Black"
+								BorderBrush="#A0A0A0">
 
 									</Button>
 								</Grid>
 							
 						</Border>
-						<Border Name="Panel_Agilent"  Background="LightGray" Width="300" Margin="5" CornerRadius="10">
+						<Border Name="Panel_Agilent"  Background="LightGray"  Margin="5" CornerRadius="10">
 							
 
 								<Grid
@@ -111,24 +122,32 @@
 									<Button
 										Click="Button_Open_Port_Agilent"
 										Content="Подключить"
+										HorizontalContentAlignment="Center"
 										Width="130"
 										Grid.Column="1"
 										Grid.Row="1"
 										CornerRadius="10"
-										Margin="5">
+										Margin="5"
+										Background="#E1E1E1"
+								Foreground="Black"
+								BorderBrush="#A0A0A0">
 
 									</Button>
 									<Button
 										Click="Button_Close_Port_Agilent"
 										Content="Отключить"
+										HorizontalContentAlignment="Center"
 										Width="130"
 										Grid.Column="0"
 										Grid.Row="1"
-										CornerRadius="10">
+										CornerRadius="10"
+										Background="#E1E1E1"
+								Foreground="Black"
+								BorderBrush="#A0A0A0">
 									</Button>
 								</Grid>
 						</Border>
-						<Border Name="Panel_PLC"  Background="LightGray" Width="300" Margin="5" CornerRadius="10">
+						<Border Name="Panel_PLC"  Background="LightGray" Margin="5" CornerRadius="10">
 							
 
 								<Grid
@@ -156,20 +175,28 @@
 									<Button
 										Click="Button_Open_Port_PLC"
 										Content="Подключить"
+										HorizontalContentAlignment="Center"
 										Width="130"
 										Grid.Column="1"
 										Grid.Row="2"
 										CornerRadius="10"
-										Margin="5">
+										Margin="5"
+										Background="#E1E1E1"
+								Foreground="Black"
+								BorderBrush="#A0A0A0">
 
 									</Button>
 									<Button
 										Click="Button_Close_Port_PLC"
 										Content="Отключить"
+										HorizontalContentAlignment="Center"
 										Width="130"
 										Grid.Column="0"
 										Grid.Row="2"
-										CornerRadius="10">
+										CornerRadius="10"
+										Background="#E1E1E1"
+								Foreground="Black"
+								BorderBrush="#A0A0A0">
 
 									</Button>
 								</Grid>
@@ -190,13 +217,13 @@
              AcceptsTab="True"
              ScrollViewer.VerticalScrollBarVisibility="Auto"
              TextWrapping="Wrap"
-					 CornerRadius="10">
+					 CornerRadius="10" BorderBrush="#A0A0A0" Background="White">
 
 				</TextBox>
 			
 			<StackPanel Margin="10,0,0,0">
 				<TextBlock Text="Настройка" ></TextBlock>
-				<Border BorderBrush="Black"
+				<Border BorderBrush="#A0A0A0" Background="#F0F0F0"
                 BorderThickness="1" CornerRadius="10" Padding="10">
 					<StackPanel >
 
@@ -206,7 +233,10 @@
 								Margin="5"
 								Width="300"
 								HorizontalContentAlignment="Center"
-									CornerRadius="10"/>
+									CornerRadius="10"
+								Background="#E1E1E1"
+							Foreground="Black"
+							BorderBrush="#A0A0A0"/>
 
 						<Button Name="Combo_Setting_Button"
 							Content="Открыть отдельные настройки" 
@@ -214,7 +244,10 @@
 								HorizontalContentAlignment="Center"
 								Width="300"
 								Click="Combo_Setting" 
-								CornerRadius="10"/>
+								CornerRadius="10"
+								Background="#E1E1E1"
+								Foreground="Black"
+								BorderBrush="#A0A0A0"/>
 							
 							<Button Name="Setting_Volt"
 								Click="Button_Setting_Volt"
@@ -222,7 +255,10 @@
 								Margin="5"
 								Width="300"
 								HorizontalContentAlignment="Center" IsVisible="false"
-									CornerRadius="10"/>
+									CornerRadius="10"
+								Background="#E1E1E1"
+								Foreground="Black"
+								BorderBrush="#A0A0A0"/>
 
 							<Button Name="Setting_IEPE"
 								Click="Button_Setting_IEPE"
@@ -230,7 +266,10 @@
 								Margin="5"
 								Width="300"
 								HorizontalContentAlignment="Center" IsVisible="false"
-									CornerRadius="10"/>
+									CornerRadius="10"
+								Background="#E1E1E1"
+							Foreground="Black"
+							BorderBrush="#A0A0A0"/>
 
 							<Button Name="Setting_4_20"
 								Click="Button_Setting_4_20"
@@ -238,7 +277,10 @@
 								Margin="5"
 								Width="300"
 								HorizontalContentAlignment="Center" IsVisible="false"
-									CornerRadius="10"/>
+									CornerRadius="10"
+								Background="#E1E1E1"
+							Foreground="Black"
+							BorderBrush="#A0A0A0"/>
 
 							<Button Name="Setting_Rs_485"
 								Click="Setting_Rs_485_Click"
@@ -246,14 +288,20 @@
 								Margin="5"
 								Width="300"
 								HorizontalContentAlignment="Center" IsVisible="false"
-									CornerRadius="10"/>
+									CornerRadius="10"
+								Background="#E1E1E1"
+							Foreground="Black"
+							BorderBrush="#A0A0A0"/>
 						<Button Name="Save_Reg"
 								Click="Save_Reg_Button"
 								Content="Сохранить регистры на сервер"
 								Margin="5"
 								Width="300"
 								HorizontalContentAlignment="Center" IsVisible="false"
-								CornerRadius="10"/>
+								CornerRadius="10"
+								Background="#E1E1E1"
+								Foreground="Black"
+								BorderBrush="#A0A0A0"/>
 
 							<Border Background="LightGray" Margin="5" Name="Serial_Border" IsVisible="True" CornerRadius="10">
 								<Grid ColumnDefinitions="Auto,Auto" Margin="10" >
