--- a/AWS/Views/MainWindow.axaml
+++ b/AWS/Views/MainWindow.axaml
@@ -39,7 +39,7 @@
 									<Label
 										Grid.Column="0"
 										Grid.Row="0"
-										Content="Порт Генератора"
+										Content="Порт генератора"
 										Margin="0,5,0,0">
 									</Label>
 									<ComboBox
@@ -159,7 +159,7 @@
 									<Label
 										Grid.Column="0"
 										Grid.Row="0"
-										Content="Порт Датчика"
+										Content="Порт RS-485"
 										Margin="0,5,0,0">
 									</Label>
 									<ComboBox
