--- a/AWS/Views/MainWindow.axaml
+++ b/AWS/Views/MainWindow.axaml
@@ -7,8 +7,9 @@
         x:Class="AWS.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="АРМ v: 0.1.6"
-        FontFamily="Arial">
-	
+        FontFamily="Arial"
+		CanResize="False">
+		
 	<StackPanel Background="#FBFBFB">
 		<Canvas>
 			<StackPanel Margin="350,0,0,0"  >
